--- a/Location/geolocation.html
+++ b/Location/geolocation.html
@@ -10,7 +10,7 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAan3acAGO35HCbdgY7a_vFwSk8d5Ms2QU&libraries=places&callback=initMap"
+        src="https://maps.googleapis.com/maps/api/js?key=Your_API_Key&libraries=places&callback=initMap"
         async defer></script>
 </head>
 
